2008-09-05

	* Build.PL

	Excluded nekoware

	* t/10base.t

	Improved the methodology

2008-08-24

	* lib/Data/Validation.pm:

	Here Moosey, Moosey, Moosey

2008-08-22

	* lib/Data/Validation.pm:

	Introduced constructor which means an API change
	Added filters

2008-06-02

	* Build.PL:

	Made version a build requirement

2008-05-23

	* t/02pod.t:

	Added POD tests

